# VibeMatching

./: .dockerignore  .env test  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: cd-deploy.yml  ci-backend.yml  ci-bot.yml
alembic/: env.py
alembic/versions/: 0001_init_schema.py  0002_ranking_stage1_schema.py
app/: main.py
app/api/: router.py
app/api/dependencies/: auth.py
app/api/routes/: health.py  interests.py  matches.py  photos.py  profiles.py  (+2 more)
app/core/: config.py  database.py  errors.py  logging.py  minio_client.py  redis_client.py
app/models/: __init__.py  complaint.py  enums.py  interest.py  match.py  photo.py  profile.py  profile_interest.py  rating.py  rating_history.py  swipe.py  user.py
app/repositories/: __init__.py  health_repository.py  interests_repository.py  matches_repository.py  photos_repository.py  profiles_repository.py  ratings_repository.py  swipes_repository.py  users_repository.py
app/schemas/: __init__.py  interests.py  matches.py  photos.py  profiles.py  swipes.py  users.py
app/services/: base_rank_service.py  events_service.py  feed_cache_service.py  health_service.py  interests_service.py  matches_service.py  photos_service.py  profiles_service.py  ranking_client.py  rating_score.py  swipes_service.py  users_service.py
bot/: backend_client.py  config.py  keyboards.py  main.py  smoke_test.py
bot/constants/: menu_actions.py
bot/handlers/: __init__.py  feed.py  menu.py  profile.py  start.py
bot/keyboards/: __init__.py  inline.py  reply.py
bot/middlewares/: activity_and_session.py
bot/services/: api_client.py  common_service.py  feed_service.py  menu_service.py  profile_service.py  start_flow.py
bot/states/: profile.py
bot/utils/: context.py  formatters.py  profile_cards.py
docs/: tz.md
practices/pr_5/: .gitignore  Dockerfile  Gemfile  README.md  Rakefile  TRANSACTIONS.sql  docker-compose.yml  run_examples.rb
practices/pr_brokers/: .gitignore  README.md  aggregate_results.py  benchmark.py  build_visual_report.py  docker-compose.yml  requirements.txt  run_experiments.sh
practices/pr_cache/: .env.example  .gitignore  README.md  cache_strategies.py  docker-compose.yml  load_generator.py  report.md  requirements.txt  run_tests.py  test_metrics.json
ranking_service/: main.py
ranking_service/consumers/: profile_events_consumer.py
ranking_service/core/: config.py
ranking_service/domain/: schemas.py
ranking_service/repositories/: profiles_index.py
ranking_service/services/: scoring.py
tests/: __init__.py  conftest.py
tests/bot/: __init__.py  conftest.py  test_config.py  test_keyboards.py  test_middlewares.py  test_states.py  test_utils.py
tests/integration/: __init__.py  test_matches_routes.py  test_photos_routes.py  test_profiles_routes.py  test_swipes_routes.py  test_users_routes.py
tests/unit/: __init__.py
(+47 files in other folders)
