[tool.poetry]
name = "vibematching"
version = "0.1.0"
description = "VibeMatching backend"
authors = ["VibeMatching Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
psycopg = { extras = ["binary"], version = "^3.2.6" }
alembic = "^1.13.2"
pydantic-settings = "^2.6.1"
redis = "^5.0.8"
aio-pika = "^9.4.3"
minio = "^7.2.9"
python-multipart = "^0.0.9"
aiogram = "^3.13.1"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^4.1.0"
pytest-httpx = "^0.30.0"
pytest-mock = "^3.13.0"
pytest-timeout = "^2.2.0"
aiosqlite = "^0.20.0"
ruff = "^0.6.8"
mypy = "^1.8.0"
types-redis = "^4.6.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "UP",          # pyupgrade
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    "A",           # flake8-builtins
    "T10",         # flake8-debugger
]
ignore = ["E501", "E203"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=70",
]
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (with database)",
    "slow: slow running tests",
    "bot: bot tests",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
